<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainActivityLinearLayout"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/layoutBackgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <Button
       android:id="@+id/buttonAddMember"
       android:layout_height="@dimen/buttonHeight"
       android:layout_width="@dimen/buttonWidth"
       android:text="@string/buttonTextAddMember"
       android:textSize="@dimen/buttonTextSize"
       android:background="@drawable/button_shape"
       android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
       android:textAllCaps="false"
       android:onClick="addMember"/>
    <Button
        android:id="@+id/buttonAddExpenses"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/buttonTextAddExpenses"
        android:textSize="@dimen/buttonTextSize"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
        android:textAllCaps="false"
        android:onClick="addExpenses"/>
    <Button
        android:id="@+id/buttonViewExpenses"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/buttonTextViewExpenses"
        android:textSize="@dimen/buttonTextSize"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
        android:textAllCaps="false"
        android:onClick="viewExpenses"/>
    <Button
        android:id="@+id/buttonAddAdvance"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:textSize="@dimen/buttonTextSize"
        android:text="@string/buttonTextAddAdvance"
        android:background="@drawable/button_shape"
        android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
        android:textAllCaps="false"
        android:onClick="addAdvance"/>
    <Button
        android:id="@+id/buttonMembersDetail"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:text="@string/buttonTextMembersDetail"
        android:textSize="@dimen/buttonTextSize"
        android:background="@drawable/button_shape"
        android:textAllCaps="false"
        android:onClick="membersDetail"
        android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"/>
 <Button
     android:id="@+id/buttonRemoveMember"
     android:layout_height="@dimen/buttonHeight"
     android:layout_width="@dimen/buttonWidth"
     android:text="@string/buttonTextRemoveMember"
     android:textSize="@dimen/buttonTextSize"
     android:background="@drawable/button_shape"
     android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
     android:textAllCaps="false"
     android:onClick="removeMember"/>
 <Button
     android:id="@+id/buttonClearExpenses"
     android:layout_height="@dimen/buttonHeight"
     android:layout_width="@dimen/buttonWidth"
     android:text="@string/buttonTextClearAllExpenses"
     android:textSize="@dimen/buttonTextSize"
     android:background="@drawable/button_shape"
     android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
     android:textAllCaps="false"
     android:onClick="clearAllExpenses"/>
 <Button
     android:id="@+id/buttonClearAdvance"
     android:layout_height="@dimen/buttonHeight"
     android:layout_width="@dimen/buttonWidth"
     android:text="@string/buttonTextClearAdvance"
     android:textSize="@dimen/buttonTextSize"
     android:background="@drawable/button_shape"
     android:layout_marginBottom="@dimen/buttonLayoutBottomMargin"
     android:textAllCaps="false"
     android:onClick="clearAdvance"/>
</LinearLayout>