<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/advancePaymentActivityLinearLayout"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/layoutBackgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Spinner
        android:layout_width="@dimen/spinnerWidth"
        android:layout_height="@dimen/spinnerHeight"
        android:id="@+id/spinnerMembersContact"
        android:layout_marginBottom="@dimen/bottomMargin"
       />
    <EditText
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/editTextAdvancePayment"
        android:inputType="number"
        android:hint="@string/editTextHintAdvancePayment"
        android:background="@drawable/edit_text_shape"
        android:layout_marginBottom="@dimen/bottomMargin"/>
    <EditText
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/editTextMemberName"
        android:textColor="@color/colorAccent"
        android:hint="@string/editTextHintMemberName"
        android:background="@drawable/edit_text_shape"
        android:layout_marginBottom="@dimen/bottomMargin"/>
    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:id="@+id/buttonAddAdvancePayment"
        android:background="@drawable/button_shape"
        android:text="@string/buttonTextAdd"
        android:onClick="addAdvancePayment"/>
    <Button
        android:layout_width="@dimen/backButtonWidth"
        android:layout_height="@dimen/backButtonHeight"
        android:background="@drawable/backbutton"
        android:onClick="backToHome"
        android:layout_marginTop="@dimen/buttonLayoutTopMargin"/>
</LinearLayout>