<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addMemberActivityLayout"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/layoutBackgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.design.widget.TextInputLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/textInputLayoutMemberName"
    android:layout_marginBottom="@dimen/bottomMargin">
    <EditText
        android:layout_width="@dimen/editTextWidth"
        android:layout_height="@dimen/editTextHeight"
        android:id="@+id/editTextMemberName"
        android:hint="@string/editTextHintMemberName"
        android:ems="10"
        android:textSize="@dimen/editTextTextSize"
        android:textColor="@color/colorPrimary"
        android:inputType="textPersonName" />
</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutMemberContact"
        android:gravity="center"
        android:layout_marginBottom="@dimen/bottomMargin">

        <EditText
            android:layout_width="@dimen/buttonWidth"
            android:layout_height="@dimen/editTextHeight"
            android:id="@+id/editTextMemberContact"
            android:textSize="@dimen/editTextTextSize"
            android:hint="@string/editTextHintMemberContact"
            android:textColor="@color/colorPrimary"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutMemberAddress"
        android:layout_marginBottom="@dimen/bottomMargin"
        android:gravity="center">
        <EditText
            android:layout_width="@dimen/editTextWidth"
            android:layout_height="@dimen/editTextHeight"
            android:id="@+id/editTextMemberAddress"
            android:ems="10"
            android:hint="@string/editTextHintMemberAddress"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/editTextTextSize"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:id="@+id/buttonSaveMemberDetail"
        android:text="@string/buttonTextSave"
        android:textSize="@dimen/buttonTextSize"
        android:textAllCaps="false"
        android:background="@drawable/button_shape"
        android:onClick="saveMemberDetails"/>

    <Button
        android:layout_width="@dimen/backButtonWidth"
        android:layout_height="@dimen/backButtonHeight"
        android:background="@drawable/backbutton"
        android:onClick="backToHome"
        android:layout_marginTop="@dimen/buttonLayoutTopMargin"/>

</LinearLayout>